--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- header start -->
-  <header>
+  <header class="sticky-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light p0">
         <a class="navbar-brand logo" href="index.html">FARE<span>.</span></a>
@@ -34,19 +34,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto menu">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link menu-smooth" href="#banner">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link menu-smooth" href="#about">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">menu</a>
+              <a class="nav-link menu-smooth" href="#menus">menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">reservation</a>
+              <a class="nav-link menu-smooth" href="#contact">reservation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">blog</a>
+              <a class="nav-link menu-smooth" href="#blogs">blog</a>
             </li>
           </ul>
         </div>
@@ -55,7 +55,7 @@
   </header>
   <!-- header end -->
   <!-- banner start -->
-  <section class="banner">
+  <section class="banner" id="banner">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -157,7 +157,7 @@
   </section>
   <!-- recipes end -->
   <!-- about us start -->
-  <section class="about-us">
+  <section class="about-us" id="about">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -188,7 +188,7 @@
   </section>
   <!-- about us end -->
   <!-- menu start -->
-  <section class="menus">
+  <section class="menus" id="menus">
     <div class="container">
       <div class="row">
         <div class="col-md-12 wow fadeInUp">
@@ -261,7 +261,7 @@
   </section>
   <!-- menu menu -->
   <!-- contact strat -->
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
@@ -338,7 +338,7 @@
   </section>
   <!-- contact end -->
   <!-- events section start -->
-  <section class="events">
+  <section class="events" id="blogs">
     <div class="container">
       <div class="row">
         <div class="col-md-12 wow fadeInUp">
@@ -510,6 +510,18 @@
       datepicker: true,
       formate: 'y-m-d',
       weeks: true
+    });
+  </script>
+  <script>
+    $('.menu-smooth').click(function (e) {
+      let divCoords = $(e.target.hash).offset();
+      let height = $('nav').height();
+      e.preventDefault();
+      window.scrollTo({
+        left: divCoords.left,
+        top: divCoords.top - (height + 18),
+        behavior: 'smooth'
+      });
     });
   </script>
 </body>
