--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
               scrambled it to make
             </p>
-            <a class="wow fadeInUp" href="#">Get Started</a>
+            <a class="wow fadeInUp" href="#contact">Get Started</a>
           </div>
         </div>
         <div class="col-md-6">
